# CEDICA

./: README.md
admin/: .gitignore  README.md  app.py  pyproject.toml
admin/src/core/: config.py  database.py  seeds.py
admin/src/core/auth/: __init__.py  user.py
admin/src/core/board/: __init__.py  cobro.py  consulta.py  contacto_emergencia.py  contenido.py  documento.py  domicilio.py  ejemplar.py  empleado.py  empleado_ejemplar.py  familiares_responsables.py  institucion_escolar.py  jinete_amazona.py  medio_de_pago.py  pago.py  permiso.py  puesto.py  rol.py  rol_permiso.py  situacion_previsional.py  tipo_de_jinete.py
admin/src/web/: __init__.py  comandos.py  errores.py  funciones_jinja.py  rutas.py  storage.py
admin/src/web/api/: contacto.py  contenido.py
admin/src/web/controllers/: auth.py  cobros.py  contacto.py  contenido.py  documento.py  ejemplar.py  empleado.py  familiares_responsables.py  graficos.py  jinete_amazona.py  pago.py  reportes.py  user.py
admin/src/web/controllers/form/: familiares_form.py  jinete_amazona_form.py  reportForm.py  user_form.py  user_update_form.py  validacion_contacto.py  validacion_domicilio.py
admin/src/web/handlers/: auth.py  error.py
admin/src/web/schemas/: consulta.py  contenido.py
admin/src/web/templates/: error.html  home.html  layout.html
admin/src/web/templates/auth/: confirmacion.html  login.html
admin/src/web/templates/cobros/: create.html  (+3 more)
admin/static/: error.css  flash.css  styles.css
admin/static/js/: choice_selector.js  close_flashes.js  create_cobro_validaciones.js  showSection.js  toggle_eye.js
(+82 files in other folders)
